<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_light"
    android:padding="20dp">


    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/dialog_content_placeholder"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save" />
    </LinearLayout>
</LinearLayout>