<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.odom.barcodeqr.ui.ScanFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_radio"
        android:name="com.odom.barcodeqr.ui.RadioGroupFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_generate" >
        <action android:id="@+id/action_radioGroupFragment_to_generateFragment"
            app:destination="@id/navigation_generate" />
    </fragment>

    <fragment
        android:id="@+id/navigation_generate"
        android:name="com.odom.barcodeqr.ui.GenerateFragment"
        android:label="generate">

        <argument android:name="selectedType"
            app:argType="string" />
        
        <action android:id="@+id/action_generateFragment_to_radioFragment"
            app:destination="@id/navigation_radio" />

    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.odom.barcodeqr.ui.HistoryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_history" />
</navigation>